--- a/artivity-datamodel/app.config
+++ b/artivity-datamodel/app.config
@@ -6,7 +6,7 @@
   <connectionStrings>
     <add name="virt0" providerName="Semiodesk.Trinity" connectionString="provider=virtuoso;host=localhost;port=1111;uid=dba;pw=dba;rule=urn:semiodesk/ruleset"/>
   </connectionStrings>
-  <TrinitySettings namespace="Artivity.Model">
+  <TrinitySettings namespace="Artivity.DataModel">
     <OntologySettings>
 
       <Ontology Uri="http://www.w3.org/1999/02/22-rdf-syntax-ns#" Prefix="rdf">
