--- a/artivity-explorer/packages.config
+++ b/artivity-explorer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net40" />
   <package id="dotNetRDF" version="1.0.9.3683" targetFramework="net40" />
   <package id="dotNetRDF.Data.Virtuoso" version="1.0.9.3683" targetFramework="net40" />
   <package id="Eto.Forms" version="2.1.0" targetFramework="net40" />
