--- a/artivity-apid/app.config
+++ b/artivity-apid/app.config
@@ -1,28 +1,54 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<configuration>
+﻿<configuration>
   <configSections>
-    <section name="TrinitySettings" type="Semiodesk.Trinity.Configuration.TrinitySettings, Semiodesk.Trinity"/>
+    <section name="TrinitySettings" type="Semiodesk.Trinity.Configuration.TrinitySettings, Semiodesk.Trinity" />
   </configSections>
   <connectionStrings>
     <add name="virt0" providerName="Semiodesk.Trinity" connectionString="provider=virtuoso;host=localhost;port=1111;uid=dba;pw=dba;rule=urn:semiodesk/ruleset"/>
   </connectionStrings>
-  <runtime>
-  </runtime>
-  <TrinitySettings namespace="Artivity.Api.Http">
+  <TrinitySettings namespace="Artivity.DataModel">
     <OntologySettings>
-      <!--http://www.w3.org/1999/02/22-rdf-syntax-ns#-->
+
       <Ontology Uri="http://www.w3.org/1999/02/22-rdf-syntax-ns#" Prefix="rdf">
         <FileSource Location="Ontologies/rdf.rdf"/>
       </Ontology>
-      <!--http://www.w3.org/2000/01/rdf-schema#-->
+
       <Ontology Uri="http://www.w3.org/2000/01/rdf-schema#" Prefix="rdfs">
         <FileSource Location="Ontologies/rdfs.n3"/>
       </Ontology>
-      <!--http://www.w3.org/2002/07/owl#-->
+
       <Ontology Uri="http://www.w3.org/2002/07/owl#" Prefix="owl">
         <FileSource Location="Ontologies/owl.n3"/>
       </Ontology>
+
+      <Ontology Uri="http://www.w3.org/ns/prov#" Prefix="prov">
+        <FileSource Location="Ontologies/prov.ttl"/>
+      </Ontology>
+      
+      <Ontology Uri="http://www.w3.org/2001/04/infoset#" Prefix="xml">
+        <FileSource Location="Ontologies/xml.rdf"/>
+      </Ontology>
+      
+      <Ontology Uri="http://www.semanticdesktop.org/ontologies/2007/01/19/nie#" Prefix="nie">
+        <FileSource Location="Ontologies/nie.rdf"/>
+      </Ontology>
+      
+      <Ontology Uri="http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#" Prefix="nfo">
+        <FileSource Location="Ontologies/nfo.rdf"/>
+      </Ontology>
+      
+      <Ontology Uri="http://semiodesk.com/artivity/1.0/" Prefix="art">
+        <FileSource Location="Ontologies/art.ttl"/>
+      </Ontology>
+      
+      <Ontology Uri="http://xmlns.com/foaf/0.1/" Prefix="foaf">
+        <FileSource Location="Ontologies/foaf.rdf"/>
+      </Ontology>
+      
+      <Ontology Uri="http://purl.org/dc/elements/1.1/" Prefix="dces">
+        <FileSource Location="Ontologies/dcelements.ttl"/>
+      </Ontology>
     </OntologySettings>
+
     <VirtuosoStoreSettings>
       <RuleSets>
         <RuleSet Uri="urn:semiodesk/ruleset">
@@ -30,6 +56,13 @@
             <Graph Uri="http://www.w3.org/1999/02/22-rdf-syntax-ns#"/>
             <Graph Uri="http://www.w3.org/2000/01/rdf-schema#"/>
             <Graph Uri="http://www.w3.org/2002/07/owl#"/>
+            <Graph Uri="http://www.w3.org/ns/prov#"/>
+            <Graph Uri="http://www.w3.org/2001/04/infoset#"/>
+            <Graph Uri="http://www.semanticdesktop.org/ontologies/2007/01/19/nie#"/>
+            <Graph Uri="http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#"/>
+            <Graph Uri="http://xmlns.com/foaf/0.1/"/>
+            <Graph Uri="http://semiodesk.com/artivity/1.0/"/>
+            <Graph Uri="http://purl.org/dc/elements/1.1/"/>
           </Graphs>
         </RuleSet>
       </RuleSets>
