Bugfix in libartivity: Correctly escaping paths in requested URLs. Bugfix in .NET components: Referencing custom dlls for Semiodesk.Trinity and OpenLink.Data.Virtuoso for compatibility with Mono on Ubuntu 14.04 Implemented monitor module in APID: libaritivity now informs APID about newly created files.

--- a/artivity-apid/Makefile
+++ b/artivity-apid/Makefile
@@ -1,26 +1,34 @@
 PACKAGE_NAME = artivity-apid
 PACKAGE_VERSION = $(shell dpkg-parsechangelog | grep Version: | cut -d' ' -f2- | cut -d'-' -f1)
+PROJECT_FILE = Artivity.Apid.csproj
 
-SHARED_LIBS = Artivity.Model.dll dotNetRDF.Data.Virtuoso.dll dotNetRDF.dll OpenLink.Data.Virtuoso.dll Semiodesk.Trinity.dll VDS.Common.dll HtmlAgilityPack.dll Newtonsoft.Json.dll virtado4.dll
+SHARED_LIBS = Artivity.DataModel.dll dotNetRDF.Data.Virtuoso.dll dotNetRDF.dll OpenLink.Data.Virtuoso.dll Semiodesk.Trinity.dll VDS.Common.dll HtmlAgilityPack.dll Newtonsoft.Json.dll virtado4.dll
 
 all:
 
 clean:
-	rm -Rf dist
+	if test -f $(PROJECT_FILE); then \
+		xbuild $(PROJECT_FILE) /p:Configuration=Release /t:Clean; \
+		rm -Rf bin/Release/*.mdb; \
+		rm -Rf bin/Release/*.dll; \
+		rm -Rf bin/Release/*.config; \
+	fi;
+	rm -Rf tmp
 	rm -f $(PACKAGE_NAME)-$(PACKAGE_VERSION).tar.gz
 
 dist:
-	mkdir dist
-	cp bin/Release/*.exe dist/
-	cp bin/Release/*.config dist/
-	cp bin/Release/*.dll dist/
-	cp artivity.png artivity-apid artivity-apid.desktop Makefile COPYING dist/
-	cd dist && rm $(SHARED_LIBS)
-	chmod 644 dist/*
-	chmod 755 dist/*.exe
-	cp -R debian dist/
-	cd dist && tar cvzf ../$(PACKAGE_NAME)-$(PACKAGE_VERSION).tar.gz *
-	rm -R dist
+	xbuild $(PROJECT_FILE) /p:Configuration=Release
+	mkdir tmp
+	cp bin/Release/*.exe tmp/
+	cp bin/Release/*.config tmp/
+	cp bin/Release/*.dll tmp/
+	cp artivity.png artivity-apid artivity-apid.desktop Makefile COPYING tmp/
+	cd tmp && rm $(SHARED_LIBS)
+	chmod 644 tmp/*
+	chmod 755 tmp/*.exe
+	cp -R debian tmp/
+	cd tmp && tar cvzf ../$(PACKAGE_NAME)-$(PACKAGE_VERSION).tar.gz *
+	rm -R tmp
 
 install:
 	mkdir -p $(DESTDIR)/usr/bin/
