--- a/artivity-apid/Artivity.Apid.csproj
+++ b/artivity-apid/Artivity.Apid.csproj
@@ -7,7 +7,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>Artivity.Api.Http</RootNamespace>
     <AssemblyName>artivity-apid</AssemblyName>
-    <ReleaseVersion>1.5</ReleaseVersion>
+    <ReleaseVersion>1.5.20</ReleaseVersion>
     <StartupObject>Artivity.Api.Http.HttpService</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -40,9 +40,6 @@
     <Reference Include="dotNetRDF.Data.Virtuoso">
       <HintPath>..\packages\dotNetRDF.Data.Virtuoso.1.0.9.3683\lib\net40\dotNetRDF.Data.Virtuoso.dll</HintPath>
     </Reference>
-    <Reference Include="OpenLink.Data.Virtuoso">
-      <HintPath>..\packages\dotNetRDF.Data.Virtuoso.1.0.9.3683\lib\net40\OpenLink.Data.Virtuoso.dll</HintPath>
-    </Reference>
     <Reference Include="Nancy">
       <HintPath>..\packages\Nancy.1.4.1\lib\net40\Nancy.dll</HintPath>
     </Reference>
@@ -59,7 +56,10 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Numerics" />
     <Reference Include="Semiodesk.Trinity">
-      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.107\lib\Net40\Semiodesk.Trinity.dll</HintPath>
+      <HintPath>..\artivity-datamodel\References\Semiodesk.Trinity.dll</HintPath>
+    </Reference>
+    <Reference Include="OpenLink.Data.Virtuoso">
+      <HintPath>..\artivity-datamodel\References\OpenLink.Data.Virtuoso.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -76,6 +76,7 @@
     <Compile Include="Options.cs" />
     <Compile Include="Parameters\UriParameters.cs" />
     <Compile Include="Modules\UriModule.cs" />
+    <Compile Include="Modules\MonitorModule.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
