--- a/artivity-inkscape/debian-dist/Makefile
+++ b/artivity-inkscape/debian-dist/Makefile
@@ -17,7 +17,7 @@ clean:
 	rm -f *.debian.tar.gz
 	rm -f *.diff.gz
 	rm -Rf build-area
-	rm -Rf $(PACKAGE_NAME)
+	rm -Rf $(PACKAGE_NAME)*
 
 branch: clean
 	cd .. && make dist-gzip && mv $(DIST_FILE) debian-dist/
@@ -39,3 +39,6 @@ source: branch
 
 release: branch source
 	dput $(PACKAGE_REPO) $(PACKAGE_NAME)_$(PACKAGE_VERSION)-$(PACKAGE_RELEASE)_source.changes
+
+install: binary
+	sudo dpkg -i $(PACKAGE_NAME)_$(PACKAGE_VERSION)-$(PACKAGE_RELEASE)_amd64.deb
